# test

./: .cookiecutter.json  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/test/: __main__.py
tests/: __init__.py  test_main.py
