[tool.poetry]
name = "test"
version = "0.0.0"
description = "Test"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/test"
repository = "https://github.com/cjolowicz/test"
documentation = "https://test.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/test/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2"}
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.9.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.2"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
test = "test.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["test"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
